# symportal_kitchen

./: .pre-commit-config.yaml  README.md  pyproject.toml
symportal_kitchen/db_queries/: db_queries.py
symportal_kitchen/email_notifications/: submission_status.py  submission_status_update.py
symportal_kitchen/email_notifications/templates/: status_update_email_template.html
symportal_kitchen/utils/: utils.py
tests/email_notifications/: test_submission_status_update.py
